Modified: Home page should no longer be cut off

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2791,6 +2791,8 @@ html.admin-page-active {
   overflow: hidden;
   box-shadow: var(--shadow-modern);
   transition: var(--transition-smooth);
+  align-items: center;
+  justify-content: center;
 }
 
 .btn-primary-modern:hover {
@@ -3020,7 +3022,8 @@ html.admin-page-active {
 }
 
 .feature-icon {
-  margin-bottom: 25px;
+  position: relative;
+  margin-bottom: 35px;
 }
 
 .icon-bg {
@@ -3032,8 +3035,13 @@ html.admin-page-active {
   align-items: center;
   justify-content: center;
   font-size: 2rem;
-  margin: 0 auto;
+  margin: 0 0 0 auto;
+  transform: translate(-10px, -18px);
   box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
+}
+
+.feature-card h3 {
+  margin-top: 0;
 }
 
 .feature-card h3 {
